--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,7 +1,7 @@
 ---
 - name: Update sources
   apt:
-    update_cache: yes
+    update_cache: true
     cache_valid_time: 86400
   changed_when: false
 
