--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ services:
 
 before_install:
   - 'sudo docker pull ${distribution}:${version}'
-  - 'sudo docker build --no-cache --rm --file=travis/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible test'
+  - 'sudo docker build --no-cache --rm --file=test/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible test'
 
 script:
   - container_id=$(mktemp)
