--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,20 @@
 sudo: required
 
 env:
-  - distribution: debian
-    version: buster
-  - distribution: debian
-    version: stretch
+  - distro: debian
+    tag: buster
+  - distro: debian
+    tag: stretch
 
 services:
   - docker
 
 before_install:
-  - 'sudo docker pull ${distribution}:${version}'
-  - 'sudo docker build --no-cache --rm --file=test/Dockerfile.${distribution}-${version} --tag=${distribution}-${version}:ansible test'
+  - 'sudo docker pull pvelati/docker-${distro}-base:${tag}'
 
 script:
   - container_id=$(mktemp)
-  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/test_role:ro ${distribution}-${version}:ansible > "${container_id}"'
+  - 'sudo docker run --detach --privileged -v /sys/fs/cgroup:/sys/fs/cgroup:ro --volume="${PWD}":/etc/ansible/roles/test_role:ro docker-${distro}-base:${tag} > "${container_id}"'
   - 'sudo docker exec "$(cat ${container_id})" pip install -r /etc/ansible/roles/test_role/requirements.txt'
   - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/test_role/test/test.yaml --syntax-check'
   - 'sudo docker exec "$(cat ${container_id})" env ANSIBLE_FORCE_COLOR=1 ansible-playbook -v /etc/ansible/roles/test_role/test/test.yaml'
